test/corpus/blocks.txt
================================================================================
Block with one statement
================================================================================
test

    [a]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (statement
          (identifier))))))

================================================================================
Block with arguments
================================================================================
test

    [:a :b | a]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (block_argument)
        (block_argument)
        (statement
          (identifier))))))

================================================================================
Block with arguments and temporaries
================================================================================
test

    [:a :b | |a b| a]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (block_argument)
        (block_argument)
        (temporaries
          (identifier)
          (identifier))
        (statement
          (identifier))))))

================================================================================
Block with temporaries
================================================================================
test

    [|a b| a]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (temporaries
          (identifier)
          (identifier))
        (statement
          (identifier))))))

================================================================================
Block with temporaries and pipe operator
================================================================================
test

    [|a b| a | b]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (temporaries
          (identifier)
          (identifier))
        (statement
          (binary_message
            (identifier)
            (binary_operator)
            (identifier)))))))

================================================================================
Block with multiple statements
================================================================================
test

    [a. b. c.]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (statement
          (identifier))
        (statement
          (identifier))
        (statement
          (identifier))))))

================================================================================
Block argument with number
================================================================================
test

    [:a2 :b | a]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (block_argument)
        (block_argument)
        (statement
          (identifier))))))

================================================================================
Block argument with space
================================================================================
test

    [: a2 :  b | a]
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (block
        (block_argument)
        (block_argument)
        (statement
          (identifier))))))
