test/corpus/cascades.txt
================================================================================
Cascade to Unary Messages
================================================================================
test

    a abc; def
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (cascade
        (unary_message
          (identifier)
          (unary_identifier))
        (cascaded_unary_message
          (unary_identifier))))))

================================================================================
Cascade to Binary Messages
================================================================================
test

    a + 3; + 5
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (cascade
        (binary_message
          (identifier)
          (binary_operator)
          (number))
        (cascaded_binary_message
          (binary_operator)
          (number))))))

================================================================================
Cascade to Keyword Messages
================================================================================
test

    test
        with: 5;
        with: 6 and: 7
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (cascade
        (keyword_message
          (identifier)
          (keyword)
          (number))
        (cascaded_keyword_message
          (keyword)
          (number)
          (keyword)
          (number))))))

================================================================================
Cascade to Many Keyword Messages
================================================================================
test

    test
        with: 5;
        with: 6 and: 7;
        abc: 42 def: 34;
        wer: 12
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (cascade
        (keyword_message
          (identifier)
          (keyword)
          (number))
        (cascaded_keyword_message
          (keyword)
          (number)
          (keyword)
          (number))
        (cascaded_keyword_message
          (keyword)
          (number)
          (keyword)
          (number))
        (cascaded_keyword_message
          (keyword)
          (number))))))
