test/corpus/comments.txt
================================================================================
Single-line Comment
================================================================================
highlightQuery
	" https://github.com/kilian-kier/tree-sitter-pharo/blob/main/src/queries/highlights.scm "

	123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (comment)
    (statement
      (number))))

================================================================================
Multi-line Comment
================================================================================
highlightQuery
	123. "a
b
c" 234
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (number))
    (comment)
    (statement
      (number))))
