test/corpus/method_body.txt
=================
One statement
=================
test: abc

    hello
---

(source
  (method
    (keyword_selector (keyword) (identifier))
    (statement (identifier))))

=================
Multiple statements
=================
test: abc

    hello.
    abc.
    def
---

(source
  (method
    (keyword_selector (keyword) (identifier))
    (statement (identifier))
    (statement (identifier))
    (statement (identifier))))

=================
Multiple statements trailing dot
=================
test: abc

    hello.
    abc.
    def.
---

(source
  (method
    (keyword_selector (keyword) (identifier))
    (statement (identifier))
    (statement (identifier))
    (statement (identifier))))

=================
Multiple trailing dots
=================
test: abc

    hello.
    abc..
    def...
---

(source
  (method
    (keyword_selector (keyword) (identifier))
    (statement (identifier))
    (statement (identifier))
    (statement (identifier))))

=================
With temporaries
=================
test: abc

    | a b |
    hello.
    abc..
    def...
---

(source
  (method
    (keyword_selector (keyword) (identifier))
    (temporaries (identifier) (identifier))
    (statement (identifier))
    (statement (identifier))
    (statement (identifier))))

=================
With empty temporaries
=================
test: abc

    | |
    hello.
    abc..
    def...
---

(source
  (method
    (keyword_selector (keyword) (identifier))
    (temporaries)
    (statement (identifier))
    (statement (identifier))
    (statement (identifier))))

=================
With Return
=================
test: abc

    | |
    hello.
    abc..
    ^ def
---

(source
  (method
    (keyword_selector (keyword) (identifier))
    (temporaries)
    (statement (identifier))
    (statement (identifier))
    (statement (return (identifier)))))
